# experimental-design

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml  test.yml
demos/: lhs_sampling_extension_by_doubling.py  lhs_sampling_extension_constant.py  lhs_sampling_extension_demo.py  lhs_sampling_local_extension.py  lhs_sampling_nonzero_correlation.py  orthogonal_sampling_extension_by_doubling.py  orthogonal_sampling_extension_demo.py
experiment_design/: designer.py  experiment_designer.py  optimize.py  orthogonal_sampling.py  random_sampling.py  scorers.py  types.py  variable.py
experiment_design/orthogonal_sampling/: creator.py  extender.py  lhs.py
experiment_design/variable/: __init__.py  space.py  types.py  variable.py
tests/: test_variable.py  variable.py
