[tool.poetry]
name = "experimental-design"
version = "0.1.0"
description = ""
authors = ["Can Bogoclu"]
readme = "README.md"
packages = [{include = "experiment_design"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
scipy = "^1.12.0"

# Optionals for visualisations
matplotlib = { version = "^3.8.2", optional = true }
jupyter = { version = "^1.0.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.extras]
demo = ["matplotlib", "jupyter"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
