[tool.poetry]
name = "experimental-design"
version = "0.1.0"
description = ""
authors = ["Can Bogoclu"]
readme = "README.md"
packages = [{include = "experiment_design"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
scipy = "^1.12.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.poetry.group.demo]
optional = true

[tool.poetry.group.demo.dependencies]
seaborn = "^0.13.2"
matplotlib = "^3.8.2"
jupyter =  "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
